--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,7 @@ services:
       db:
         condition: service_healthy
     environment:
-      - DB_USER=${POSTGRES_USER}
-      - DB_PASSWORD=${POSTGRES_PASSWORD}
-      - DB_NAME=${POSTGRES_DB}
-      - DB_HOST=db
-
+      - POSTGRES_DSN=${POSTGRES_DSN}
   db:
     image: postgres:16-alpine
     restart: always
@@ -21,8 +17,8 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - db-data:/var/lib/postgresql/data
-    expose:
-      - 5432
+    ports:
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
