feat: redis cache included

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         condition: service_healthy
     environment:
       - POSTGRES_DSN=${POSTGRES_DSN}
+      - REDIS_ADDR=${REDIS_ADDR}
   db:
     image: postgres:16-alpine
     restart: always
@@ -24,6 +25,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: ["redis-server", "--appendonly", "yes"]
 volumes:
   db-data:
+  redis-data:
