--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,9 @@ jobs:
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Run DB migrations
-        run: goose -dir "db/migrations" postgres "${{ env.TEST_POSTGRES_DSN }}" up
+        run: goose -dir "db/migrations" postgres "${{ env.POSTGRES_DSN }}" up
         env:
-          TEST_POSTGRES_DSN: "postgres://testuser:testpassword@localhost:5432/testdb?sslmode=disable"
+          POSTGRES_DSN: "postgres://testuser:testpassword@localhost:5432/testdb?sslmode=disable"
 
       - name: Run Linter
         uses: golangci/golangci-lint-action@v6
@@ -49,5 +49,6 @@ jobs:
       - name: Run Integration Tests
         run: go test -v ./...
         env:
-          TEST_POSTGRES_DSN: "postgres://testuser:testpassword@localhost:5432/testdb?sslmode=disable"
+          POSTGRES_DSN: "postgres://testuser:testpassword@localhost:5432/testdb?sslmode=disable"
           REDIS_ADDR: localhost:6379
+          REDIS_DB: 1
