--- a/cmd/inventory-service/Dockerfile
+++ b/cmd/inventory-service/Dockerfile
@@ -7,12 +7,12 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o intentory-service ./cmd/intentory-service
+RUN CGO_ENABLED=0 GOOS=linux go build -o inventory-service ./cmd/inventory-service
 
 FROM gcr.io/distroless/base-debian12
 
 WORKDIR /app
 
-COPY --from=builder /build/intentory-service ./intentory-service
+COPY --from=builder /build/inventory-service ./inventory-service
 
-CMD ["./intentory-service"]
+CMD ["./inventory-service"]
