--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,80 +1,17 @@
 services:
-  order-service:
-    build:
-      context: .
-      dockerfile: cmd/order-service/Dockerfile
-    ports:
-      - "8080:8080"
-    depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    environment:
-      POSTGRES_DSN: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable"
-      REDIS_ADDR: "redis:6379"
-      REDIS_DB: 0
-      KAFKA_BROKERS: "kafka:9093"
-      RABBITMQ_URL: "amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/"
-      PRODUCT_SERVICE_ADDR: "product-service:50051"
-    restart: on-failure
-
-  inventory-service:
-    build:
-      context: .
-      dockerfile: cmd/inventory-service/Dockerfile
-    depends_on:
-      kafka:
-        condition: service_healthy
-      db:
-        condition: service_healthy
-    environment:
-      POSTGRES_DSN: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable"
-      KAFKA_BROKERS: "kafka:9093"
-    restart: on-failure
-
-  notification-service:
-    build:
-      context: .
-      dockerfile: cmd/notification-service/Dockerfile
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-    environment:
-      RABBITMQ_URL: "amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/"
-    restart: on-failure
-
-  product-service:
-    build:
-      context: .
-      dockerfile: cmd/product-service/Dockerfile
-    restart: on-failure
-    depends_on:
-      db:
-        condition: service_healthy
-    ports:
-      - "50051:50051"
-    environment:
-      POSTGRES_DSN: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable"
-
   db:
     image: postgres:16-alpine
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./database/init:/docker-entrypoint-initdb.d
+      - ./db/init:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
