--- a/k8s/notification-service-deployment.yml
+++ b/k8s/notification-service-deployment.yml
@@ -1,24 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-service-deployment
+  name: notification-service-deployment
   labels:
-    app: order-service
+    app: notification-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: order-service
+      app: notification-service
   template:
     metadata:
       labels:
-        app: order-service
+        app: notification-service
     spec:
       containers:
-        - name: order-service
-          image: mlucas4330/orderflow-order-service:v1.0.0
-          ports:
-            - containerPort: 8080
+        - name: notification-service
+          image: mlucas4330/orderflow-notification-service:v1.0.0
           envFrom:
             - configMapRef:
                 name: env-configmap
