--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,12 +11,18 @@ services:
       kafka: { condition: service_healthy }
       rabbitmq: { condition: service_healthy }
     environment:
-      POSTGRES_DSN: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/orderflow_dev_db?sslmode=disable"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASS: ${POSTGRES_PASS}
+      POSTGRES_DB: orderflow_dev_db
+      POSTGRES_HOST: ${POSTGRES_HOST}
       REDIS_ADDR: "redis:6379"
       REDIS_DB: 0
       KAFKA_BROKERS: "kafka:9093"
-      RABBITMQ_URL: "amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/"
       PRODUCT_SERVICE_ADDR: "product-service:50051"
+      RABBITMQ_USER: ${RABBITMQ_USER}
+      RABBITMQ_PASS: ${RABBITMQ_PASS}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
     restart: on-failure
 
   inventory-service:
@@ -27,8 +33,11 @@ services:
       kafka: { condition: service_healthy }
       db: { condition: service_healthy }
     environment:
-      POSTGRES_DSN: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/orderflow_dev_db?sslmode=disable"
       KAFKA_BROKERS: "kafka:9093"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASS: ${POSTGRES_PASS}
+      POSTGRES_DB: orderflow_dev_db
+      POSTGRES_HOST: ${POSTGRES_HOST}
     restart: on-failure
 
   notification-service:
@@ -39,7 +48,9 @@ services:
       rabbitmq:
         condition: service_healthy
     environment:
-      RABBITMQ_URL: "amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/"
+      RABBITMQ_USER: ${RABBITMQ_USER}
+      RABBITMQ_PASS: ${RABBITMQ_PASS}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
     restart: on-failure
 
   product-service:
@@ -53,4 +64,7 @@ services:
     ports:
       - "50051:50051"
     environment:
-      POSTGRES_DSN: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/orderflow_dev_db?sslmode=disable"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASS: ${POSTGRES_PASS}
+      POSTGRES_DB: orderflow_dev_db
+      POSTGRES_HOST: ${POSTGRES_HOST}
