--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,14 +11,12 @@ services:
         go test -v ./...
       "
     environment:
-      POSTGRES_DSN: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/orderflow_test_db?sslmode=disable"
       REDIS_ADDR: "redis:6379"
       REDIS_DB: 1
       KAFKA_BROKERS: "kafka:9093"
-      RABBITMQ_URL: "amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/"
       PRODUCT_SERVICE_ADDR: "product-service:50051"
       GOOSE_DRIVER: postgres
-      GOOSE_DBSTRING: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/orderflow_test_db?sslmode=disable
+      GOOSE_DBSTRING: postgres://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_HOST}:5432/orderflow_test_db?sslmode=disable
       GOOSE_MIGRATION_DIR: ./db/migrations
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
     depends_on:
