--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -68,3 +68,22 @@ services:
       POSTGRES_PASS: ${POSTGRES_PASS}
       POSTGRES_DB: orderflow_dev_db
       POSTGRES_HOST: ${POSTGRES_HOST}
+  prometheus:
+    image: prom/prometheus:v2.47.2
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    depends_on:
+      - order-service
+
+  grafana:
+    image: grafana/grafana:10.1.5
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
