fix: ci postgres service with wrong url

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASS }}
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          POSTGRES_DB: orderflow_test_db
         ports:
           - 5432:5432
         options: >-
@@ -97,7 +97,7 @@ jobs:
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Run DB migrations
-        run: goose -dir "db/migrations" postgres "postgres://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASS }}@${{ secrets.POSTGRES_HOST }}:5432/orderflow_test_db?sslmode=disable" up
+        run: goose -dir "db/migrations" postgres "localhost://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASS }}@${{ secrets.POSTGRES_HOST }}:5432/orderflow_test_db?sslmode=disable" up
 
       - name: Run Linter
         uses: golangci/golangci-lint-action@v6
